--- a/Collaborative Filtering.ipynb
+++ b/Collaborative Filtering.ipynb
@@ -4,7 +4,340 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Collaborative Fil"
+    "# Collaborative Filtering\n",
+    "This notebook will contain the steps to create a collaborative fitering recommendation system for the anime and ratings datasets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# I will need to square root values so I will use the math library\n",
+    "from math import sqrt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing the Data\n",
+    "### Anime Dataset\n",
+    "Let's read the anime dataset into a pandas dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>anime_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>type</th>\n",
+       "      <th>episodes</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>members</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5114</td>\n",
+       "      <td>Fullmetal Alchemist: Brotherhood</td>\n",
+       "      <td>Action, Adventure, Drama, Fantasy, Magic, Mili...</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>9.26</td>\n",
+       "      <td>793665</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>28977</td>\n",
+       "      <td>Gintama°</td>\n",
+       "      <td>Action, Comedy, Historical, Parody, Samurai, S...</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>9.25</td>\n",
+       "      <td>114262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9253</td>\n",
+       "      <td>Steins;Gate</td>\n",
+       "      <td>Sci-Fi, Thriller</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>9.17</td>\n",
+       "      <td>673572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9969</td>\n",
+       "      <td>Gintama&amp;#039;</td>\n",
+       "      <td>Action, Comedy, Historical, Parody, Samurai, S...</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>9.16</td>\n",
+       "      <td>151266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>32935</td>\n",
+       "      <td>Haikyuu!!: Karasuno Koukou VS Shiratorizawa Ga...</td>\n",
+       "      <td>Comedy, Drama, School, Shounen, Sports</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.15</td>\n",
+       "      <td>93351</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   anime_id                                               name  \\\n",
+       "0      5114                   Fullmetal Alchemist: Brotherhood   \n",
+       "1     28977                                           Gintama°   \n",
+       "2      9253                                        Steins;Gate   \n",
+       "3      9969                                      Gintama&#039;   \n",
+       "4     32935  Haikyuu!!: Karasuno Koukou VS Shiratorizawa Ga...   \n",
+       "\n",
+       "                                               genre type  episodes  rating  \\\n",
+       "0  Action, Adventure, Drama, Fantasy, Magic, Mili...   TV      64.0    9.26   \n",
+       "1  Action, Comedy, Historical, Parody, Samurai, S...   TV      51.0    9.25   \n",
+       "2                                   Sci-Fi, Thriller   TV      24.0    9.17   \n",
+       "3  Action, Comedy, Historical, Parody, Samurai, S...   TV      51.0    9.16   \n",
+       "4             Comedy, Drama, School, Shounen, Sports   TV      10.0    9.15   \n",
+       "\n",
+       "   members  \n",
+       "0   793665  \n",
+       "1   114262  \n",
+       "2   673572  \n",
+       "3   151266  \n",
+       "4    93351  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anime_df = pd.read_csv(\"datasets/cleaned_anime.csv\")\n",
+    "anime_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With collaborative filtering, we actually don't need a lot of the animes' metadata as the recommendations are primarily dictated by the users who have watched a certain anime and not the actual contents. This contrasts with content based filtering which uses the anime information to predict what a user would like. As a result of this, we can remove a lot of information that we don't need from the anime data both to make the process clearer and save memory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>anime_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5114</td>\n",
+       "      <td>Fullmetal Alchemist: Brotherhood</td>\n",
+       "      <td>9.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>28977</td>\n",
+       "      <td>Gintama°</td>\n",
+       "      <td>9.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9253</td>\n",
+       "      <td>Steins;Gate</td>\n",
+       "      <td>9.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9969</td>\n",
+       "      <td>Gintama&amp;#039;</td>\n",
+       "      <td>9.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>32935</td>\n",
+       "      <td>Haikyuu!!: Karasuno Koukou VS Shiratorizawa Ga...</td>\n",
+       "      <td>9.15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   anime_id                                               name  rating\n",
+       "0      5114                   Fullmetal Alchemist: Brotherhood    9.26\n",
+       "1     28977                                           Gintama°    9.25\n",
+       "2      9253                                        Steins;Gate    9.17\n",
+       "3      9969                                      Gintama&#039;    9.16\n",
+       "4     32935  Haikyuu!!: Karasuno Koukou VS Shiratorizawa Ga...    9.15"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove information we don't need\n",
+    "anime_df = anime_df.loc[:, [\"anime_id\", \"name\", \"rating\"]]\n",
+    "anime_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ratings Dataset\n",
+    "Read in the data into a dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>anime_id</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>24</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>79</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>226</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>241</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id  anime_id  rating\n",
+       "0        1        20     NaN\n",
+       "1        1        24     NaN\n",
+       "2        1        79     NaN\n",
+       "3        1       226     NaN\n",
+       "4        1       241     NaN"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rating_df = pd.read_csv(\"datasets/cleaned_rating.csv\")\n",
+    "rating_df.head()"
    ]
   }
  ],
