--- a/Collaborative Filtering.ipynb
+++ b/Collaborative Filtering.ipynb
@@ -339,6 +339,73 @@
     "rating_df = pd.read_csv(\"datasets/cleaned_rating.csv\")\n",
     "rating_df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The only thing to do for the ratings data is to remove missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "user_id     0\n",
+       "anime_id    0\n",
+       "rating      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove missing values\n",
+    "rating_df.dropna(inplace=True)\n",
+    "# How many missing values do we have?\n",
+    "rating_df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Building the Recommendation System\n",
+    "To build the collaborative filtering system, I will be using a sample user input from animes I have watched in the past. To build it, I will be using the SciKit Surprise library."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import the surprise library\n",
+    "from surprise import Reader\n",
+    "from surprise import Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
