Finished collaborative filtering and created recommender pkl file

--- a/Collaborative Filtering.ipynb
+++ b/Collaborative Filtering.ipynb
@@ -10,16 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "# I will need to square root values so I will use the math library\n",
-    "from math import sqrt"
+    "import numpy as np"
    ]
   },
   {
@@ -33,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +141,7 @@
        "4    93351  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +233,7 @@
        "4     32935  Haikyuu!!: Karasuno Koukou VS Shiratorizawa Ga...    9.15"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +327,7 @@
        "4        1       241     NaN"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +358,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,29 +380,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "^C\n"
+      "Wall time: 16.5 s\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<surprise.dataset.DatasetAutoFolds at 0x25d62585070>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "%%time\n",
     "# Import the surprise library\n",
     "from surprise import Reader\n",
-    "from surprise import Dataset"
+    "from surprise import Dataset\n",
+    "\n",
+    "# reader parses the file containing the ratings\n",
+    "# Our rating scale is from 1 to 10 inclusive\n",
+    "reader = Reader(rating_scale=(1, 10))\n",
+    "\n",
+    "# Load the dataframe into the model's dataset\n",
+    "data = Dataset.load_from_df(rating_df[[\"user_id\", \"anime_id\", \"rating\"]], reader)\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have our rating data loaded into surprise, we can create our collaborative filtering system. For this, I decided to use the famous SVD algorithm that is included with surprise. I will also be using surprise's GridSearchCV which is very similar to sklearn's GridSearchCV to find the best parameters for the best accuracy."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import the SVD algorithm\n",
+    "from surprise import SVD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import GridSearchCV to tune parameters\n",
+    "from surprise.model_selection import GridSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-2)]: Using backend LokyBackend with 7 concurrent workers.\n",
+      "[Parallel(n_jobs=-2)]: Done  27 tasks      | elapsed: 18.3min\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 41min 48s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-2)]: Done  54 out of  54 | elapsed: 41.1min finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This cell took a LONG time to run on my computer\n",
+    "# Don't suggest running it unless you have time to waste\n",
+    "\n",
+    "%%time\n",
+    "\n",
+    "# Create parameters combinations\n",
+    "params = {\n",
+    "    \"n_epochs\": [10, 15], \"lr_all\": [0.003, 0.005, 0.007], \"reg_all\": [0.01, 0.02, 0.03]\n",
+    "}\n",
+    "\n",
+    "# Run the grid search using SVD and the parameters to find the best parameters for Root Mean Square Error and Mean Absolute Error\n",
+    "gs = GridSearchCV(SVD, params, measures=['rmse', 'mae'], cv=3, joblib_verbose=2, n_jobs=-2)\n",
+    "\n",
+    "gs.fit(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.138933300338331\n",
+      "{'n_epochs': 15, 'lr_all': 0.007, 'reg_all': 0.03}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Best RMSE score\n",
+    "print(gs.best_score[\"rmse\"])\n",
+    "\n",
+    "# Best combination of parameters for the best RMSE\n",
+    "print(gs.best_params[\"rmse\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have the best parameters from the GridSearchCV we ran, we can now set our recommendation algorithm to the parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 4min 40s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x25d62ac7880>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "algo = gs.best_estimator[\"rmse\"]\n",
+    "algo.fit(data.build_full_trainset())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is as far as my Google searches and tutorials got me. What I suspect is that using `algo.predict(user_id, anime_id).est` I can get the estimated rating that the user would give for that specific anime. Perhaps if I made a numpy array that stored the estimated ratings for a number of animes for a given user, I could find the ones with the highest estimated ratings and recommend those."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.01538233688656"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Just testing out the prediction method on user 4271 on anime id 7088\n",
+    "pred = algo.predict(4271, 7088).est\n",
+    "pred"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Last thing to do is to export the recommendation system into a Pickle file for potentially usage in the future."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the dump function\n",
+    "from surprise.dump import dump\n",
+    "# Create the Pickle file for the SVD algorithm\n",
+    "dump(\"recommender.pkl\", algo)"
+   ]
   }
  ],
  "metadata": {
