Started cleaning the ratings dataset

--- a/deployment data/data cleaning.ipynb
+++ b/deployment data/data cleaning.ipynb
@@ -528,6 +528,446 @@
    "source": [
     "anime_df.isnull().any()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ratings Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uid</th>\n",
+       "      <th>profile</th>\n",
+       "      <th>anime_uid</th>\n",
+       "      <th>text</th>\n",
+       "      <th>score</th>\n",
+       "      <th>scores</th>\n",
+       "      <th>link</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>255938</td>\n",
+       "      <td>DesolatePsyche</td>\n",
+       "      <td>34096</td>\n",
+       "      <td>\\n           \\n         \\n           \\n       ...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>{'Overall': '8', 'Story': '8', 'Animation': '8...</td>\n",
+       "      <td>https://myanimelist.net/reviews.php?id=255938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>259117</td>\n",
+       "      <td>baekbeans</td>\n",
+       "      <td>34599</td>\n",
+       "      <td>\\n           \\n         \\n           \\n       ...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>{'Overall': '10', 'Story': '10', 'Animation': ...</td>\n",
+       "      <td>https://myanimelist.net/reviews.php?id=259117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>253664</td>\n",
+       "      <td>skrn</td>\n",
+       "      <td>28891</td>\n",
+       "      <td>\\n           \\n         \\n           \\n       ...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>{'Overall': '7', 'Story': '7', 'Animation': '9...</td>\n",
+       "      <td>https://myanimelist.net/reviews.php?id=253664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8254</td>\n",
+       "      <td>edgewalker00</td>\n",
+       "      <td>2904</td>\n",
+       "      <td>\\n           \\n         \\n           \\n       ...</td>\n",
+       "      <td>9</td>\n",
+       "      <td>{'Overall': '9', 'Story': '9', 'Animation': '9...</td>\n",
+       "      <td>https://myanimelist.net/reviews.php?id=8254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>291149</td>\n",
+       "      <td>aManOfCulture99</td>\n",
+       "      <td>4181</td>\n",
+       "      <td>\\n           \\n         \\n           \\n       ...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>{'Overall': '10', 'Story': '10', 'Animation': ...</td>\n",
+       "      <td>https://myanimelist.net/reviews.php?id=291149</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      uid          profile  anime_uid  \\\n",
+       "0  255938   DesolatePsyche      34096   \n",
+       "1  259117        baekbeans      34599   \n",
+       "2  253664             skrn      28891   \n",
+       "3    8254     edgewalker00       2904   \n",
+       "4  291149  aManOfCulture99       4181   \n",
+       "\n",
+       "                                                text  score  \\\n",
+       "0  \\n           \\n         \\n           \\n       ...      8   \n",
+       "1  \\n           \\n         \\n           \\n       ...     10   \n",
+       "2  \\n           \\n         \\n           \\n       ...      7   \n",
+       "3  \\n           \\n         \\n           \\n       ...      9   \n",
+       "4  \\n           \\n         \\n           \\n       ...     10   \n",
+       "\n",
+       "                                              scores  \\\n",
+       "0  {'Overall': '8', 'Story': '8', 'Animation': '8...   \n",
+       "1  {'Overall': '10', 'Story': '10', 'Animation': ...   \n",
+       "2  {'Overall': '7', 'Story': '7', 'Animation': '9...   \n",
+       "3  {'Overall': '9', 'Story': '9', 'Animation': '9...   \n",
+       "4  {'Overall': '10', 'Story': '10', 'Animation': ...   \n",
+       "\n",
+       "                                            link  \n",
+       "0  https://myanimelist.net/reviews.php?id=255938  \n",
+       "1  https://myanimelist.net/reviews.php?id=259117  \n",
+       "2  https://myanimelist.net/reviews.php?id=253664  \n",
+       "3    https://myanimelist.net/reviews.php?id=8254  \n",
+       "4  https://myanimelist.net/reviews.php?id=291149  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rating_df = pd.read_csv(\"reviews.csv\")\n",
+    "\n",
+    "rating_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uid</th>\n",
+       "      <th>anime_uid</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>255938</td>\n",
+       "      <td>34096</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>259117</td>\n",
+       "      <td>34599</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>253664</td>\n",
+       "      <td>28891</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8254</td>\n",
+       "      <td>2904</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>291149</td>\n",
+       "      <td>4181</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      uid  anime_uid  score\n",
+       "0  255938      34096      8\n",
+       "1  259117      34599     10\n",
+       "2  253664      28891      7\n",
+       "3    8254       2904      9\n",
+       "4  291149       4181     10"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rating_df = rating_df[[\"uid\", \"anime_uid\", \"score\"]]\n",
+    "rating_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>anime_id</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>255938</td>\n",
+       "      <td>34096</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>259117</td>\n",
+       "      <td>34599</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>253664</td>\n",
+       "      <td>28891</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8254</td>\n",
+       "      <td>2904</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>291149</td>\n",
+       "      <td>4181</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id  anime_id  rating\n",
+       "0   255938     34096       8\n",
+       "1   259117     34599      10\n",
+       "2   253664     28891       7\n",
+       "3     8254      2904       9\n",
+       "4   291149      4181      10"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rating_df.columns = [\"user_id\", \"anime_id\", \"rating\"]\n",
+    "rating_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "user_id     int64\n",
+       "anime_id    int64\n",
+       "rating      int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rating_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "user_id     False\n",
+       "anime_id    False\n",
+       "rating      False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rating_df.isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11], dtype=int64)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# How is there an 11????\n",
+    "a = rating_df[\"rating\"].unique()\n",
+    "a.sort()\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>anime_id</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>119190</th>\n",
+       "      <td>252847</td>\n",
+       "      <td>413</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        user_id  anime_id  rating\n",
+       "119190   252847       413      11"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rating_df[rating_df[\"rating\"] == 11]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
