--- a/deployment data/data cleaning.ipynb
+++ b/deployment data/data cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "9  https://myanimelist.net/anime/2904/Code_Geass_...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
        "4   ['Action', 'Mystery', 'Supernatural', 'Vampire']  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "4   ['Action', 'Mystery', 'Supernatural', 'Vampire']  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
        "4  https://myanimelist.net/reviews.php?id=291149  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
        "4  291149       4181     10"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +827,7 @@
        "4   291149      4181      10"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -894,21 +894,20 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11], dtype=int64)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# How is there an 11????\n",
-    "a = rating_df[\"rating\"].unique()\n",
-    "a.sort()\n",
-    "a"
+    "unique_ratings = rating_df[\"rating\"].unique()\n",
+    "unique_ratings.sort()\n",
+    "unique_ratings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -953,13 +952,65 @@
        "119190   252847       413      11"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rating_df[rating_df[\"rating\"] == 11]"
+    "rating_df[rating_df[\"rating\"] > 10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>anime_id</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [user_id, anime_id, rating]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rating_df.loc[119190, \"rating\"] = 10\n",
+    "rating_df[rating_df[\"rating\"] > 10]"
    ]
   },
   {
